LEPL:26 Внедрение mapstruct (Внедрить библиотеку, переписать мапперы, + тесты)